added model window

--- a/Game/imgui.ini
+++ b/Game/imgui.ini
@@ -1,7 +1,6 @@
 [Window][Debug##Default]
-ViewportPos=1837,716
-ViewportId=0x9F5F46A1
-Size=400,400
+Pos=14,215
+Size=340,171
 Collapsed=0
 
 [Window][Hola]
@@ -51,8 +50,8 @@ Size=380,82
 Collapsed=0
 
 [Window][Camera Properties Editor]
-Pos=12,180
-Size=344,482
+Pos=916,13
+Size=344,463
 Collapsed=0
 
 [Window][Initial Window]
@@ -62,13 +61,23 @@ Collapsed=0
 
 [Window][Initial Application Window]
 Pos=8,10
-Size=340,159
+Size=359,194
 Collapsed=0
 
 [Window][Dear ImGui Style Editor]
 ViewportPos=749,191
 ViewportId=0x6D551092
 Size=353,1026
+Collapsed=0
+
+[Window][Model Properties Editor]
+Pos=16,214
+Size=328,97
+Collapsed=0
+
+[Window][Model Properties]
+Pos=12,209
+Size=348,192
 Collapsed=0
 
 [Table][0xC9935533,3]
