Improved model paths and organization

--- a/Game/imgui.ini
+++ b/Game/imgui.ini
@@ -50,8 +50,9 @@ Size=380,82
 Collapsed=0
 
 [Window][Camera Properties Editor]
-Pos=916,13
-Size=344,463
+ViewportPos=1279,177
+ViewportId=0x2CCF7FE7
+Size=302,463
 Collapsed=0
 
 [Window][Initial Window]
@@ -61,7 +62,7 @@ Collapsed=0
 
 [Window][Initial Application Window]
 Pos=8,10
-Size=359,194
+Size=343,194
 Collapsed=0
 
 [Window][Dear ImGui Style Editor]
@@ -76,8 +77,8 @@ Size=328,97
 Collapsed=0
 
 [Window][Model Properties]
-Pos=12,209
-Size=348,192
+Pos=7,208
+Size=358,197
 Collapsed=0
 
 [Table][0xC9935533,3]
