--- a/Game/imgui.ini
+++ b/Game/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=14,215
+Pos=348,154
 Size=340,171
 Collapsed=0
 
@@ -9,10 +9,10 @@ Size=32,35
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1177,175
-ViewportId=0xE927CF2F
-Size=394,707
+Pos=832,0
+Size=448,720
 Collapsed=0
+DockId=0x00000006,0
 
 [Window][hola]
 Pos=60,60
@@ -50,10 +50,10 @@ Size=380,82
 Collapsed=0
 
 [Window][Camera Properties Editor]
-ViewportPos=1279,177
-ViewportId=0x2CCF7FE7
-Size=302,463
+Pos=0,355
+Size=358,365
 Collapsed=0
+DockId=0x00000008,0
 
 [Window][Initial Window]
 Pos=11,7
@@ -61,9 +61,10 @@ Size=348,151
 Collapsed=0
 
 [Window][Initial Application Window]
-Pos=8,10
-Size=343,194
+Pos=0,0
+Size=337,720
 Collapsed=0
+DockId=0x00000007,0
 
 [Window][Dear ImGui Style Editor]
 ViewportPos=749,191
@@ -77,8 +78,20 @@ Size=328,97
 Collapsed=0
 
 [Window][Model Properties]
-Pos=7,208
-Size=352,445
+Pos=927,0
+Size=353,720
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][DockSpaceViewport_11111111]
+Pos=0,0
+Size=1280,720
+Collapsed=0
+
+[Window][dd]
+ViewportPos=385,298
+ViewportId=0x0A97191D
+Size=1280,48
 Collapsed=0
 
 [Table][0xC9935533,3]
@@ -150,4 +163,13 @@ Column 1  Width=86
 Column 2  Width=86
 
 [Docking][Data]
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,180 Size=1280,720 Split=X
+  DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=925,720 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=337,720 Split=Y Selected=0x11EA88E5
+      DockNode  ID=0x00000007 Parent=0x00000003 SizeRef=358,353 Selected=0x11EA88E5
+      DockNode  ID=0x00000008 Parent=0x00000003 SizeRef=358,365 Selected=0xE379F6D6
+    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=586,720 Split=X
+      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=830,719 CentralNode=1
+      DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=448,719 Selected=0xE87781F4
+  DockNode      ID=0x00000002 Parent=0x8B93E3BD SizeRef=353,720 Selected=0x11C03890
 
